--- a/index.html
+++ b/index.html
@@ -161,8 +161,12 @@
 </main>
 
 <footer>
-    <p>© 2026 – Universo Matemático</p>
+    <p>© 2026 – Universo Matemático <br> 
+    Jose Eduardo Deara Jimenez 
+    Osvaldo de Jesus Diaz Montejo
+    </p>
 </footer>
 
 </body>
 </html>
+
