--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
 </main>
 
 <footer>
-    <p>© 2026 – Universo Matemático <br> 
+    <p>
+        © 2026 – Universo Matemático <br> 
     Jose Eduardo Deara Jimenez 
     Osvaldo de Jesus Diaz Montejo
     </p>
@@ -169,4 +170,5 @@
 
 </body>
 </html>
+
 
