--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <h2>Aritmética</h2>
         <p>
             La aritmética es la rama de las matemáticas que estudia los números
-            y las operaciones básicas como la suma, resta, multiplicación y división.
-            Es fundamental para el desarrollo del pensamiento lógico y matemático,
-            ya que permite resolver problemas cotidianos como el manejo del dinero,
-            la medición de cantidades y la comparación de valores. Además, la aritmética
-            sirve como base para comprender otras áreas más avanzadas de las matemáticas.
+            y las operaciones básicas como la suma, la resta, la multiplicación
+            y la división. Es fundamental porque permite resolver problemas
+            cotidianos relacionados con cantidades, precios, mediciones y conteos.
+            Además, sirve como base para el aprendizaje de otras áreas matemáticas
+            más avanzadas.
         </p>
         <div class="botones">
             <a href="#tabla" class="btn-secundario">Ver operaciones</a>
@@ -41,12 +41,9 @@
     <div class="info">
         <h2>Álgebra</h2>
         <p>
-            El álgebra es una rama de las matemáticas que utiliza letras, símbolos
-            y números para representar relaciones y expresiones matemáticas.
-            Su principal objetivo es resolver ecuaciones y describir patrones
-            mediante el uso de variables. El álgebra es esencial para modelar
-            situaciones reales, analizar problemas complejos y sentar las bases
-            del pensamiento abstracto que se emplea en la ciencia y la tecnología.
+            El álgebra utiliza letras y símbolos para representar relaciones
+            matemáticas y resolver ecuaciones. Permite generalizar problemas
+            y trabajar con cantidades desconocidas llamadas variables.
         </p>
         <div class="botones">
             <a href="#tabla" class="btn-secundario">Ver símbolos</a>
@@ -60,12 +57,9 @@
     <div class="info">
         <h2>Geometría</h2>
         <p>
-            La geometría se encarga del estudio de las formas, tamaños y posiciones
-            de los objetos en el plano y en el espacio. Analiza figuras como puntos,
-            líneas, ángulos, polígonos y cuerpos tridimensionales. Esta rama es
-            ampliamente utilizada en disciplinas como la arquitectura, la ingeniería
-            y el diseño, ya que permite calcular áreas, perímetros y volúmenes,
-            además de desarrollar la percepción espacial.
+            La geometría estudia las formas, tamaños y posiciones de figuras
+            en el plano y en el espacio. Se aplica en la arquitectura,
+            el diseño y la ingeniería.
         </p>
         <div class="botones">
             <a href="#tabla" class="btn-secundario">Ver conceptos</a>
@@ -79,11 +73,8 @@
     <div class="info">
         <h2>Trigonometría</h2>
         <p>
-            La trigonometría estudia las relaciones existentes entre los ángulos
-            y los lados de los triángulos, especialmente los triángulos rectángulos.
-            Emplea funciones como el seno, coseno y tangente para resolver problemas
-            relacionados con distancias y alturas. Esta rama es fundamental en
-            áreas como la física, la ingeniería, la astronomía y la navegación.
+            La trigonometría analiza la relación entre los lados y los ángulos
+            de los triángulos mediante funciones como seno, coseno y tangente.
         </p>
         <div class="botones">
             <a href="#tabla" class="btn-secundario">Ver funciones</a>
@@ -97,12 +88,8 @@
     <div class="info">
         <h2>Cálculo</h2>
         <p>
-            El cálculo es una rama avanzada de las matemáticas que se enfoca en
-            el estudio del cambio y el movimiento. Utiliza herramientas como
-            las derivadas para analizar la variación de una función y las integrales
-            para calcular áreas y acumulaciones. El cálculo es indispensable
-            en campos como la economía, la ingeniería, la física y las ciencias
-            naturales, ya que permite modelar fenómenos del mundo real.
+            El cálculo estudia el cambio y la variación a través de derivadas
+            e integrales. Es esencial en ciencias, economía e ingeniería.
         </p>
         <div class="botones">
             <a href="#tabla" class="btn-secundario">Ver ejemplos</a>
@@ -128,7 +115,7 @@
                 <td>Aritmética</td>
                 <td>Suma (+)</td>
                 <td>6 + 4 = 10</td>
-                <td>Une dos cantidades.</td>
+                <td>Une dos o más cantidades.</td>
             </tr>
             <tr>
                 <td>Álgebra</td>
@@ -146,13 +133,13 @@
                 <td>Trigonometría</td>
                 <td>Coseno</td>
                 <td>cos(60°) = 0.5</td>
-                <td>Relación entre lados del triángulo.</td>
+                <td>Relación entre lados de un triángulo.</td>
             </tr>
             <tr>
                 <td>Cálculo</td>
                 <td>Derivada</td>
                 <td>d/dx(x³) = 3x²</td>
-                <td>Mide la velocidad de cambio.</td>
+                <td>Mide la tasa de cambio.</td>
             </tr>
         </tbody>
     </table>
@@ -162,13 +149,13 @@
 
 <footer>
     <p>
-        © 2026 – Universo Matemático <br> 
-    Jose Eduardo Deara Jimenez 
-    Osvaldo de Jesus Diaz Montejo
+        © 2026 – Universo Matemático <br>
+        Elaborado por: José Eduardo Deara Jiménez y Osvaldo de Jesús Díaz Montejo
     </p>
 </footer>
 
 </body>
 </html>
+
 
 
